src/test/ui/parser/keyword-loop-as-identifier.stderr
error: expected identifier, found keyword `loop`
  --> $DIR/keyword-loop-as-identifier.rs:4:9
   |
LL |     let loop = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#loop = "foo";
   |         ^^^^^^

error: aborting due to previous error

